--- a/Models/-VC/2019.07.29_StarGAN-VC2.md
+++ b/Models/-VC/2019.07.29_StarGAN-VC2.md
@@ -104,3 +104,121 @@ In Section~[sec:stargan-vc2](#sec:stargan-vc2), we describe the proposed StarGAN
 In Section~[sec:experiments](#sec:experiments), we report the experimental results.
 
 We conclude in Section~[sec:conclusions](#sec:conclusions) with a brief summary and mention of future work.
+
+## 2·Conventional StarGAN-VC
+
+\label{sec:stargan-vc}
+
+### Training objectives
+
+\label{subsec:stargan-vc-obj}
+
+The aim of StarGAN-VC is to obtain a single generator $G$ that learns mappings among multiple domains (e.g., multiple speakers).
+
+To achieve this, StarGAN-VC extends CycleGAN-VC to a conditional setting with a domain code (e.g., a speaker identifier).
+
+More precisely, StarGAN-VC learns a generator $G$ that converts an input acoustic feature ${\bm x}$ into an output feature ${\bm x}'$ conditioned on the target domain code $c'$, i.e., $G({\bm x}, c') \rightarrow {\bm x}'$.
+
+Here, let ${\bm x} \in \mathbb{R}^{Q \times T}$ be an acoustic feature sequence where $Q$ is the feature dimension and $T$ is the sequence length, and let $c \in \{ 1, \dots, N \}$ be the corresponding domain code where $N$ is the number of domains.
+
+Inspired by StarGAN~\cite{YChoiCVPR2018}, which was originally proposed in computer vision for multi-domain image-to-image translation, StarGAN-VC solves this problem by using an adversarial loss~\cite{IGoodfellowNIPS2014}, classification loss~\cite{AOdenaICML2017}, and cycle-consistency loss~\cite{TZhouCVPR2016}.
+
+Additionally, inspired by CycleGAN-VC~\cite{TKanekoArXiv2017}, StarGAN-VC also uses an identity-mapping loss~\cite{YTaigmanICLR2017} to preserve linguistic composition.
+
+**Adversarial loss:**
+
+The adversarial loss is used to render the converted feature indistinguishable from the real target feature:
+
+\begin{flalign}
+\label{eqn:adv}
+& {\cal L}_{t\text{-}adv} = \mathbb{E}_{({\bm x}, c) \sim P({\bm x}, c)}
+[\log D({\bm x}, c)]
+\nonumber \\
+& \:\:\:\:\:\:\:\:\: + \mathbb{E}_{{\bm x} \sim P({\bm x}), c' \sim P(c')} [\log (1 - D(G({\bm x}, c'), c'))],
+\end{flalign}
+
+where $D$ is a target conditional discriminator~\cite{MMirzaArXiv2014}.
+
+By maximizing this loss, $D$ attempts to learn the best decision boundary between the converted and real acoustic features conditioned on the target domain codes ($c$ and $c'$).
+
+In contrast, $G$ attempts to render the converted feature indistinguishable from real acoustic features conditioned on $c'$ by minimizing this loss.
+
+**Classification loss:**
+
+The aim of StarGAN-VC is to synthesize the acoustic feature that belongs to the target domain.
+
+To achieve this, the classification loss is used.
+
+First, the classifier $C$ is trained for real acoustic features:
+
+\begin{flalign}
+\label{eqn:cls_r}
+{\cal L}_{cls}^r = \mathbb{E}_{({\bm x}, c) \sim P({\bm x}, c)} [- \log C(c | {\bm x})],
+\end{flalign}
+
+where $C$ attempts to classify a real acoustic feature ${\bm x}$ to the corresponding domain $c$ by minimizing this loss.
+
+Subsequently, $G$ is optimized for $C$:
+
+\begin{flalign}
+\label{eqn:cls_f}
+{\cal L}_{cls}^f = \mathbb{E}_{{\bm x} \sim P({\bm x}), c' \sim P(c')} [- \log C(c' | G({\bm x}, c'))],
+\end{flalign}
+
+where $G$ attempts to generate an acoustic feature that is classified to the target domain $c'$ by minimizing this loss.
+
+**Cycle-consistency loss:**
+
+Although the adversarial loss and classification loss encourage a converted acoustic feature to become realistic and classifiable, respectively, they do not guarantee that the converted feature will preserve the input composition.
+
+To mitigate this problem, the cycle-consistency loss is used:
+
+\begin{flalign}
+\label{eqn:cyc}
+{\cal L}_{cyc} = \mathbb{E}_{({\bm x}, c) \sim P({\bm x}, c), c' \sim P(c')} [ \| {\bm x} - G(G({\bm x}, c'), c) \|_1 ].
+\end{flalign}
+
+This cyclic constraint encourages $G$ to find out an optimal source and target pair that does not compromise the composition.
+
+**Identity-mapping loss:**
+
+To impose a further constraint on the input preservation, the identity-mapping loss is used:
+
+\begin{flalign}
+\label{eqn:id}
+{\cal L}_{id} = \mathbb{E}_{({\bm x}, c) \sim P({\bm x}, c)} [ \| G({\bm x}, c) - {\bm x} \| ].
+\end{flalign}
+
+**Full objective:**
+
+The full objective is written as
+
+\begin{flalign}
+{\cal L}_D = & \: - {\cal L}_{t\text{-}adv},
+\\
+{\cal L}_C = & \: \lambda_{cls} {\cal L}_{cls}^r,
+\\
+{\cal L}_G = & \: {\cal L}_{t\text{-}adv} + \lambda_{cls} {\cal L}_{cls}^f + \lambda_{cyc} {\cal L}_{cyc} + \lambda_{id} {\cal L}_{id},
+\end{flalign}
+
+where $D$, $C$, and $G$ are optimized by minimizing ${\cal L}_D$, ${\cal L}_C$, and ${\cal L}_G$, respectively.
+
+![](figs/network)
+
+<a id="fig:network">Comparison of conditional methods in generator networks.
+
+We consider the case when convolutional networks are used.
+
+Such networks are commonly used in state-of-the-art VC models (e.g., CycleGAN-VC~\cite{TKanekoArXiv2017}and StarGAN-VC~\cite{HKameokaSLT2018}).</a>
+
+### Network architectures
+
+\label{subsec:stargan-vc-arch}
+
+Regarding the network architectures, this study focuses on the conditional method in the generator.
+
+Hence, here we review the StarGAN-VC generator network architecture.
+
+As shown in Figure~[fig:network](#fig:network)(a), StarGAN-VC incorporates conditional information into the generator in a channel-wise manner, i.e., first creates the one-hot vector indicating the domain code, subsequently expands the one-hot vector to the feature map size, and finally concatenates it to the feature map.
+
+Concatenated features are convoluted together and propagated to the next layer.
