--- a/Models/-VC/2019.07.29_StarGAN-VC2.md
+++ b/Models/-VC/2019.07.29_StarGAN-VC2.md
@@ -222,3 +222,87 @@ Hence, here we review the StarGAN-VC generator network architecture.
 As shown in Figure~[fig:network](#fig:network)(a), StarGAN-VC incorporates conditional information into the generator in a channel-wise manner, i.e., first creates the one-hot vector indicating the domain code, subsequently expands the one-hot vector to the feature map size, and finally concatenates it to the feature map.
 
 Concatenated features are convoluted together and propagated to the next layer.
+
+## 3·StarGAN-VC2
+
+\label{sec:stargan-vc2}
+
+### Rethinking conditional method in training objectives
+
+\label{subsec:stargan-vc2-obj}
+
+We first rethink a conditional method in training objectives.
+
+As described in Section~[subsec:stargan-vc-obj](#subsec:stargan-vc-obj), StarGAN-VC uses two conditional methods to make the converted feature belonging to the target domain: the classification loss (Equations~[eqn:cls_r](#eqn:cls_r) and [eqn:cls_f](#eqn:cls_f)) and the target conditional adversarial loss (Equation~[eqn:adv](#eqn:adv)).
+
+We illustrate their training strategies in Figure~[fig:objective](#fig:objective)(a) and (b), respectively.
+
+In the classification loss (Figure~[fig:objective](#fig:objective)(a)), via Equation~[eqn:cls_r](#eqn:cls_r), the decision boundary (black line) is learned among real-data domains (e.g., between "Real $A$'' and "Real $B$'' in Figure~[fig:objective](#fig:objective)(a)).
+
+For this decision boundary, $G$ attempts to generate easily "classifiable'' data via Equation~[eqn:cls_f](#eqn:cls_f).
+
+This means that $G$ prefers to generate data that are far from the decision boundary even when the real data exist around the decision boundary.
+
+As discussed elsewhere~\cite{AOdenaICML2017,TMiyatoICLR2018,TKanekoBMVC2019}, this prevents $G$ from covering the whole real data distribution.
+
+In VC, this may result in a partial conversion.
+
+Meanwhile, the target conditional adversarial loss (Figure~[fig:objective](#fig:objective)(b)) encourages the generated data close to the real data conditioned on the target domain code.
+
+As discussed in the previous study~\cite{TMiyatoICLR2018}, this objective prevents $G$ from leaning towards generating only classifiable data.
+
+However, a possible difficulty is that this loss needs to simultaneously handle diverse data, including hard negative samples (e.g., conversion between the same speaker $A \rightarrow A$ in Figure~[fig:objective](#fig:objective)(b)) and easy negative samples (e.g, conversion between completely different speakers $B \rightarrow A$ in Figure~[fig:objective](#fig:objective)(b)).
+
+This unfair condition makes it difficult to bring all the converted data close to real target data.
+
+To solve this problem, we develop a source-and-target conditional adversarial loss defined as
+
+\begin{flalign}
+\label{eqn:stadv}
+& {\cal L}_{st\text{-}adv} = \mathbb{E}_{({\bm x, c}) \sim P({\bm x}, c), c' \sim P(c')} [\log D({\bm x}, c', c)]
+\nonumber \\
+& \:\:\:\:\:\:\:\:\: + \mathbb{E}_{({\bm x, c}) \sim P({\bm x}, c), c' \sim P(c')} [\log D(G({\bm x}, c, c'), c, c')],
+\end{flalign}
+
+where $c' \sim P(c')$ is randomly sampled independently of real data.
+
+Differently from Equation~[eqn:adv](#eqn:adv), both $G$ and $D$ are conditioned on the source code $c'$ in addition to the target code $c$.
+
+We call such $G$ and $D$ a source-and-target conditional generator and discriminator, respectively.
+
+As shown in Figure~[fig:objective](#fig:objective)(c), by using both source and target domain codes as conditional information, this loss encourages all the converted data to be close to real data in both source-wise and target-wise manners.
+
+This resolves the unfair training condition in the target conditional adversarial loss (Figure~[fig:objective](#fig:objective)(b)) and allows all the source domain data to be converted into the target domain data.
+
+One possible disadvantage of the source-and-target conditional generator is that this requires the availability of the source code in inference, which is not required in the conventional StarGAN-VC.
+
+However, note that speaker recognition has been actively studied (e.g., \cite{MMclarenICASSP2015}), and this problem can be alleviated by using it as a pre-process.
+
+### Rethinking conditional method in networks
+
+\label{subsec:stargan-vc2-arch}
+
+As indicated by previous studies on VC postfilters (e.g., global variance~\cite{TTodaTASLP2007} and modulation spectrum~\cite{STakamichiICASSP2014} postfilters), accurate modulation translation is important to achieve high-quality VC.
+
+Particularly, to achieve multi-domain VC only using a single generator, a framework must be incorporated that can conduct diverse domain-specific modulations effectively.
+
+For this challenge, a channel-wise conditional method (Figure~[fig:network](#fig:network)(a)) is not effective because the concatenated conditional information can be additively used in a convolutional procedure but cannot be multicatively used to modulate features.
+
+To alleviate this problem, we introduce a modulation-based conditional method, which can directly modulate features in a domain-dependent manner.
+
+In particular, we introduce a conditional instance normalization (CIN)~\cite{VDumoulinICLR2017}, which was originally proposed in computer vision for style transfer.
+
+As shown in Figure~[fig:network](#fig:network)(b), given the feature ${\bm f}$, CIN conducts the following procedure:
+
+\begin{flalign}
+\label{eqn:cin}
+{\rm CIN}({\bm f}; c') = \gamma_{c'} \left( \frac{{\bm f} - \mu({\bm f})}{\sigma({\bm f})} \right) + \beta_{c'},
+\end{flalign}
+
+where $\mu({\bm f})$ and $\sigma({\bm f})$ are the average and standard deviation of ${\bm f}$ that are calculated over for each instance. $\gamma_{c'}$ and $\beta_{c'}$ are domain-specific scale and bias parameters that allow the modulation to be transformed in a domain-specific manner.
+
+These parameters are learnable and optimized through training.
+
+In the above, we explain the case when the generator is conditioned on the target domain code $c'$.
+
+When using a source-and-target conditional generator introduced in Equation~[eqn:stadv](#eqn:stadv), we replace $\gamma_{c'}$ and $\beta_{c'}$ with $\gamma_{c, c'}$ and $\beta_{c, c'}$, respectively, which are selected depending on both the source $c$ and target $c'$.
