--- a/Models/-VC/2019.07.29_StarGAN-VC2.md
+++ b/Models/-VC/2019.07.29_StarGAN-VC2.md
@@ -306,3 +306,144 @@ These parameters are learnable and optimized through training.
 In the above, we explain the case when the generator is conditioned on the target domain code $c'$.
 
 When using a source-and-target conditional generator introduced in Equation~[eqn:stadv](#eqn:stadv), we replace $\gamma_{c'}$ and $\beta_{c'}$ with $\gamma_{c, c'}$ and $\beta_{c, c'}$, respectively, which are selected depending on both the source $c$ and target $c'$.
+
+## 4·Experiments
+
+\label{sec:experiments}
+
+![](figs/implementation)
+
+<a id="fig:implementation">Generator and discriminator network architectures.
+
+In input, output, and reshape layers, {\tt h}, {\tt w}, and {\tt c} represent height, width, and number of channels, respectively.
+
+In each convolution layer, {\tt k}, {\tt c}, and {\tt s} denote kernel size, number of channels, and stride, respectively.
+
+IN, GLU, PS, and GSP indicate instance normalization~\cite{DUlyanovArXiv2016}, gated linear unit~\cite{YDauphinICML2017}, pixel shuffler~\cite{WShiCVPR2016}, and global sum pooling, respectively.
+
+The generator is fully convolutional~\cite{JLongCVPR2015}.
+
+This allows an arbitrary length $T$ to be input in inference.</a>
+
+### Experimental conditions
+
+\label{subsec:exp_conditions}
+
+**Dataset:**
+
+We evaluated our method on the multi-speaker VC task using VCC 2018~\cite{VCC2018}, which contains recordings of professional US English speakers.
+
+Following the StarGAN-VC study \cite{HKameokaSLT2018}, we selected a subset of speakers as covering all inter- and intra-gender conversions: VCC2SF1, VCC2SF2, VCC2SM1, and VCC2SM2, where F and M indicate female and male speakers, respectively.
+
+Thus, the number of domains $N$ is set to 4.
+
+Our goal is to learn $4 \times 3 = 12$ different source-and-target mappings in a single model.
+
+Each speaker has sets of 81 and 35 sentences for training and evaluation, respectively.
+
+The recordings were downsampled to 22.05 kHz for this challenge.
+
+We extracted 34 Mel-cepstral coefficients (MCEPs), logarithmic fundamental frequency ($\log F_0$), and aperiodicities (APs) every 5 ms by using the WORLD analyzer \cite{MMoriseIEICE2016}.
+
+**Conversion process:**
+
+In these experiments, we focused on analyzing the performance in MCEP conversion.
+
+Hence, we applied the proposed method only to MCEP conversion,\footnote{For reference, the converted speech samples, in which the proposed method was applied to convert all acoustic features (namely, MCEPs, band APs, continuous $\log F_0$, and voice/unvoice indicator), are provided at \url{http://www.kecl.ntt.co.jp/people/kaneko.takuhiro/projects/stargan-vc2/index.html}.
+
+Even in this challenging setting, StarGAN-VC2 works reasonably well.} and for the other parts, we used typical methods, i.e., converted $\log F_0$ using logarithm Gaussian normalized transformation~\cite{KLiuFSKD2007}, directly used APs, and synthesized speech using the WORLD vocoder~\cite{MMoriseIEICE2016}.
+
+To examine the pure effect of the proposed methods, we did not use any postfilter~\cite{TKanekoICASSP2017,TKanekoIS2017a,KTanakaSLT2018} or powerful vocoder such as the WaveNet vocoder~\cite{OAaronArXiv2016,ATamamoriIS2017}.
+
+Incorporating them remains possible future work.
+
+**Implementation details:**
+
+We designed the network architectures on the basis of CycleGAN-VC2~\cite{TKanekoICASSP2019}, i.e., we used a 2-1-2D CNN in $G$ and a 2D CNN in $D$.
+
+We formulate $D$ using the projection discriminator \cite{TMiyatoICLR2018}.
+
+In the pre-experiment, we found that skip connections in residual blocks~\cite{KHeCVPR2016} result in partial conversion.
+
+Thus, we removed them in $G$.
+
+The details of the network architectures are given in Figure~[fig:implementation](#fig:implementation).
+
+For a GAN objective, we used a least squares GAN \cite{XMaoICCV2017}.
+
+We conducted speaker-wise normalization for a pre-process.
+
+We trained the networks using the Adam optimizer \cite{DPKingmaICLR2015} with a batch size of 8, in which we used a randomly cropped segment (128 frames) as one instance.
+
+The number of iterations was set to $3 \times 10^5$, learning rates for $G$ and $D$ were set to 0.0002 and 0.0001, respectively, and the momentum term was set to 0.5.
+
+We set $\lambda_{cyc} = 10$, $\lambda_{id} = 5$, and  $\lambda_{cls} = 1$.
+
+We used ${\cal L}_{id}$ only for the first $10^4$ iterations to stabilize the training at the beginning.
+
+<a id="tab:comp_obj">Comparison of MCD and MSD among models using different conditional methods in training objectives.
+
+We fix the conditional method in $G$ network as modulation-based.</a>
+
+<a id="tab:comp_net">Comparison of MCD and MSD among models using different conditional methods in $G$ networks.
+
+We fix the conditional method in the training objective as
+${\cal L}_{st\text{-}adv}$.</a>
+
+### Objective evaluation
+
+\label{subsec:objective}
+
+We conducted an objective evaluation to validate the advantages of the proposed conditional methods over other conditional methods.
+
+The same as the previous study \cite{TKanekoICASSP2019}, we used two evaluation metrics for comprehensive analysis: the Mel-cepstral distortion ({MCD}), which measures the global structural differences by calculating the distance between the target and converted MCEPs, and the modulation spectra distance ({MSD}), which measures the local structural differences by computing the distance between the target and converted logarithmic modulation spectra of MCEPs.
+
+For both metrics, a smaller value indicates that the target and converted features are more similar.
+
+We conducted comparative studies in two aspects: training objectives and network architectures, which are listed in Tables [tab:comp_obj](#tab:comp_obj) and [tab:comp_net](#tab:comp_net), respectively.
+
+We have calculated the scores averaged over three models trained with different initializations to eliminate the effect of initialization.
+
+In Table [tab:comp_obj](#tab:comp_obj), the proposed source-and-target conditional loss ${\cal L}_{st\text{-}adv}$ outperforms the other losses in terms of both the MCD and MSD.
+
+This indicates that the proposed loss is useful for improving the feature quality in terms of both the global and local structure measures.
+
+In Table [tab:comp_net](#tab:comp_net), the proposed modulation-based conditional method outperforms the conventional channel-wise conditional method in terms of the MSD.
+
+This indicates that the proposed architecture is particularly useful for improving the local structure.
+
+Through these experiments, we empirically confirm that the proposed conditional methods in objectives and networks effectively bring the converted acoustic feature sequence close to the target one.
+
+![](figs/mos)
+
+<a id="fig:mos">MOS for naturalness with 95\% confidence intervals</a>
+
+![](figs/xab)
+
+<a id="fig:xab">Average preference scores (\%) on speaker similarity</a>
+
+### Subjective evaluation
+
+\label{subsec:subjective}
+
+We conducted listening tests to analyze the performance compared with StarGAN-VC \cite{HKameokaSLT2018}, which is a state-of-the-art multi-domain non-parallel VC.
+
+To measure naturalness, we conducted a mean opinion score (MOS) test (5: excellent to 1: bad), in which we included the analysis-synthesized speech (which is the upper limit of the converted speech) as a reference (MOS: 4.2).
+
+For each model, we generated 36 sentences ($4 \times 3$ source-target combinations $\times$ 3 sentences).
+
+We conducted an XAB test to measure speaker similarity.
+
+Here, "X'' was target speech and "A'' and "B'' were speech converted by StarGAN-VC and StarGAN-VC2, respectively.
+
+For each model, we generated 24 sentences ($4 \times 3$ source-target combinations $\times$ 2 sentences).
+
+To eliminate bias in the order of stimuli, we presented all pairs in both orders (AB and BA).
+
+For each sentence pair, the listeners were asked to select their preferred one ("A'' or "B'') or "Fair.'' 12 well-educated English speakers participated in the tests.
+
+Figures~[fig:mos](#fig:mos) and [fig:xab](#fig:xab) show the MOS for naturalness and the preference scores for speaker similarity, respectively.
+
+We summarized the results on the basis of three categories: all conversion, inter-gender conversion, and intra-gender conversion.
+
+These results empirically demonstrate that StarGAN-VC2 outperforms StarGAN-VC in terms of both naturalness and speaker similarity for every category.
