--- a/Models/-VC/2019.07.29_StarGAN-VC2.md
+++ b/Models/-VC/2019.07.29_StarGAN-VC2.md
@@ -447,3 +447,28 @@ Figures~[fig:mos](#fig:mos) and [fig:xab](#fig:xab) show the MOS for naturalness
 We summarized the results on the basis of three categories: all conversion, inter-gender conversion, and intra-gender conversion.
 
 These results empirically demonstrate that StarGAN-VC2 outperforms StarGAN-VC in terms of both naturalness and speaker similarity for every category.
+
+## 5·Conclusions
+
+\label{sec:conclusions}
+
+To advance the research on multi-domain non-parallel VC, we have rethought conditional methods in StarGAN-VC in two aspects: training objectives and network architectures.
+
+We developed a source-and-target conditional adversarial loss for the former and a modulation-based conditional method for the latter and have proposed StarGAN-VC2 incorporating them.
+
+The empirical studies on non-parallel multi-speaker VC demonstrate that StarGAN-VC2 outperforms StarGAN-VC in both objective and subjective measures.
+
+StarGAN-VC2 is a general model for multi-domain VC and is not limited to multi-speaker VC.
+
+Adapting it to other tasks (e.g., multi-emotion VC and multi-pronunciation VC) remains a promising future direction.
+
+**Acknowledgements:**
+
+This work was supported by JSPS KAKENHI 17H01763.
+
+\clearpage
+\bibliographystyle{IEEEtran}
+\bibliography{refs}
+
+\end{document}
+
