--- a/Models/-VC/2024.11.29_Noro.md
+++ b/Models/-VC/2024.11.29_Noro.md
@@ -112,3 +112,65 @@ We then explore the impact of different source encoder models on the performance
 Subsequently, we explore the potential of re-purposing the reference encoder from our VC system as a self-supervised speaker encoder.
 
 Finally, Section~[sec:conclude](#sec:conclude) provides concluding remarks, summarizing the findings and highlighting future research directions.
+
+## 2·Related Work
+
+\label{sec:related}
+
+### Noise-robust Voice Conversion
+
+#### One-shot Voice Conversion
+
+Numerous studies have sought high-quality one-shot voice conversion using methods such as auto-encoders[^Hsu2016Voice], [^Kameoka2019Acvae-Vc], [^Qian2019Autovc], [^Qian2020Unsupervised], [^Wang2022DrVC], [^Popov2022Diffusion-Based], [^Wang2023Lm-Vc], [^Li2023FreeVC], [^Ju2024Naturalspeech], normalizing flows[^Kobyzev2020Normalizing], and self-supervised learning (SSL) models[^{Casanova, Edresson and Weber, Julian and Shulby, Christopher D and Junior, Arnaldo Candido and G{\"o}}lge2022YourTTS], [^Lin2021S2vc], [^Li2024Sef-Vc], [^Lim2024Wav2vec-Vc], [^Du2024UniCATS].
+
+For example, Diff-VC[^Popov2022Diffusion-Based] uses an encoder that predicts an “average voice,” transforming mel features of each phoneme into averaged mel features across a large multi-speaker dataset, followed by decoding the mel for converted speech.
+
+Similarly, FreeVC[^Li2023FreeVC] performs voice conversion by extracting disentangled content and target speaker information, then reconstructs the waveform using an end-to-end VITS framework.
+
+Most recently, FaCodec-VC[^Ju2024Naturalspeech] employs a factorized codec approach to achieve state-of-the-art one-shot voice conversion performance.
+
+It effectively disentangles speech attributes into content, prosody, and timbre representations using an information bottleneck, enabling strong one-shot voice conversion by altering the timbre of the source speech to match the target speaker.
+*Despite these advances, the effectiveness of such models decreases in challenging real-world scenarios, where reference speech samples from the internet often contain interferences like background noise, reducing the quality and similarity of the converted speech.*
+
+To address the issue of noise robustness, several studies have been conducted.
+
+For instance, Valentini-Botinhao et al.[^Valentini-Botinhao2016Investigating] proposed an RNN-based speech enhancement method to improve noise robustness, utilizing LSTM networks for two-stage processing of input signals to effectively suppress noise.
+
+Similarly, Chan et al.[^Chan2021Speech] developed a speech enhancement (SE)-assisted VC system, where the VC and SE components are jointly optimized to produce high-quality converted speech signals.
+
+Additionally, Miao et al.[^Miao2019Noise-Robust] introduced a noise-robust voice conversion method that enhances high-quefrency components through sub-band cepstrum conversion and fusion.
+
+Their approach leverages bidirectional long short-term memory networks to convert vocal tract parameters from a source to a target speaker in noisy conditions.
+
+However, these approaches are not end-to-end, requiring separate stages for enhancement and synthesis, which adds complexity and increases computational overhead during inference.
+
+To address this, some researchers have proposed training strategies to improve robustness.
+
+Huang et al.[^Huang2022Toward] proposed applying random degraded data augmentations during training to force the model to filter out degradations and perform VC accurately.
+
+Xue et al.[^Xue2021Learning] introduced a noise-controllable WaveGAN that learns noise-independent acoustic representations to improve conversion quality in noisy environments.
+
+Du et al.[^Du2022Noise-Robust] employed domain adversarial training to ensure robustness against various noise conditions during conversion.
+
+Despite these advancements, significant challenges remain, especially in extremely noisy environments where the Signal-to-Noise Ratio (SNR) is below 5 dB.
+*This paper proposes the Noro system to address this challenge, introducing a dual-branch reference encoding module and a noise-agnostic contrastive speaker loss, which significantly enhance noise robustness even in challenging acoustic environments.*
+
+### Self-supervised Learning for Speaker Representation Learning
+
+Various self-supervised learning (SSL) models have been proposed for speech processing tasks.
+
+These models are generally categorized into three types: generative, discriminative, and multi-task models[^Yang2021Superb].
+
+Generative models, such as APC[^Chung2019Unsupervised], aim to reconstruct masked or future frames, focusing on predicting the missing or upcoming parts of the speech sequence.
+
+Discriminative models like wav2vec[^Schneider2019Wav2vec] and HuBERT[^Hsu2021Hubert] use contrastive learning to distinguish between different segments of speech.
+
+Multi-task models, such as WavLM+[^Chen2021WavLM], incorporate multiple pretraining objectives to learn versatile representations for downstream tasks.
+
+These models have shown their effectiveness in various aspects of speech processing, including content, speaker, semantics, and paralinguistic information[^Yang2021Superb].
+
+Inspired by[^Cho2020Learning], [^Cho2021Improving], \textit{this study further explores the speaker representation capabilities of one-shot VC systems.
+
+The motivation arises from the observation that the reference encoder within one-shot VC systems, designed to capture the vocal timbre of diverse speakers—including previously unseen ones—naturally functions as a speaker encoder.
+
+This aligns well with self-supervised speaker representation learning. }
